--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Analyse linguistique d'un compte Twitter donnée.",
   "main": "index.js",
   "scripts": {
+    "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +19,6 @@
   "homepage": "https://github.com/demangejeremy/AnalyseLinguistiqueTwitter#readme",
   "dependencies": {
     "puppeteer": "^2.0.0",
-    "twitter": "^1.7.1"
+    "electron": "^7.0.0"
   }
 }
